--- a/css/style.css
+++ b/css/style.css
@@ -60,8 +60,71 @@ a
     font-size:36px;
 }
 
-
+/*
 @media only screen and (max-width: 768px) 
+{
+	.image-grid
+	{
+		display: grid;
+		grid-template-columns: repeat(1, 1fr);
+		line-height:0px;
+	}
+}
+*/
+
+@media (orientation: landscape) and (max-width: 1040px) 
+{
+	.image-grid
+	{
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		line-height:0px;
+	}
+	
+	.linkable-image-title
+	{
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		color: white;
+		font-family: Bradley Hand, cursive;
+		font-size:24px;
+	}
+}
+
+@media (orientation: landscape) and (max-width: 700px) 
+{
+	.image-grid
+	{
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		line-height:0px;
+	}
+	
+	.linkable-image-title
+	{
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		color: white;
+		font-family: Bradley Hand, cursive;
+		font-size:16px;
+	}
+}
+
+@media (orientation: portrait)
 {
 	.image-grid
 	{
