--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ a
 	.gallery
 	{
 		display: grid;
-		grid-gap: 1px;
+		line-height:1px;
 		grid-template-columns: repeat(1, 1fr);
 		grid-auto-flow: dense;
 	}
