--- a/css/style.css
+++ b/css/style.css
@@ -126,17 +126,6 @@ a
 		font-family: Bradley Hand, cursive;
 		font-size:24px;
 	}
-	
-	.panoramic
-	{
-		grid-column: span 1;
-	}
-
-	.bigger
-	{
-		grid-row: span 1;
-		grid-column: span 1;
-	}
 }
 
 @media (orientation: landscape) and (max-width: 700px) 
@@ -163,17 +152,6 @@ a
 		font-family: Bradley Hand, cursive;
 		font-size:16px;
 	}
-	
-	.panoramic
-	{
-		grid-column: span 1;
-	}
-
-	.bigger
-	{
-		grid-row: span 1;
-		grid-column: span 1;
-	}
 }
 
 @media (orientation: portrait)
@@ -187,10 +165,10 @@ a
 	
 	.gallery
 	{
-		display: block;
-		line-height:10px;
-		/*grid-template-columns: repeat(1, 1fr);*/
-		/*grid-auto-flow: dense;*/
+		display: grid;
+		line-height:1px;
+		grid-template-columns: repeat(1, 1fr);
+		grid-auto-flow: dense;
 	}
 	
 	.panoramic
@@ -203,5 +181,6 @@ a
 		grid-row: span 1;
 		grid-column: span 1;
 	}
+	
 }
 
