--- a/css/style.css
+++ b/css/style.css
@@ -61,20 +61,26 @@ a
 }
 
 .gallery
-{
-	
-	
+{	
 	display: grid;
 	grid-gap: 1px;
-	/*grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));*/
 	grid-template-columns: repeat(3, 1fr);
-	/*grid-auto-rows: 250px;*/
 	grid-auto-flow: dense;
 }
 
-.panoramic
+.vertical
+{
+	grid-row: span 2;
+}
+
+.small-panoramic
 {
 	grid-column: span 2;
+}
+
+.large-panoramic
+{
+	grid-column: span 3;
 }
 
 .bigger
@@ -87,10 +93,6 @@ a
 {
 	width: 100%;
 	height: 100%;
-	/*
-	height: 100%;
-	object-fit: cover;
-	*/
 	display:block;
 	
 }
@@ -176,9 +178,19 @@ a
 		grid-auto-flow: dense;
 	}
 	
-	.panoramic
+	.small-panoramic
 	{
 		grid-column: span 1;
+	}
+	
+	.large-panoramic
+	{
+		grid-column: span 1;
+	}
+
+	.vertical
+	{
+		grid-row: span 1;
 	}
 
 	.bigger
