--- a/css/style.css
+++ b/css/style.css
@@ -39,10 +39,55 @@ a
 	position: relative;
 }
 
+.linkable-image:hover img
+{
+	opacity: 0.5;
+}
+
+.linkable-image:hover p
+{
+	visibility: visible;
+	translate: translateY(0);
+}
+
 .linkable-image img
 {
 	opacity: 0.75;
+	transition: 0.4s;
 }
+
+.linkable-image h1
+{
+	position: absolute;
+	
+	top: 45%;
+	left: 50%;
+	
+	transform: translate(-50%, -50%);
+	
+	color: white;
+	font-family: Bradley Hand, cursive;
+}
+
+.linkable-image p
+{
+	position: absolute;
+	
+	visibility: hidden;
+	
+	bottom: 35%;
+	left: 50%;
+	
+	transition: transform 0.4s;
+	
+	transform: translate(-50%, -50%);
+	
+	
+	
+	color: white;
+	font-family: Bradley Hand, cursive;
+}
+	
 
 .linkable-image-title
 {
@@ -58,6 +103,14 @@ a
 	color: white;
     font-family: Bradley Hand, cursive;
     font-size:36px;
+    
+    transition: 0.5s;
+}
+
+.linkable-image-title:hover
+{
+	opacity: 0.5;
+	background: Black;
 }
 
 .gallery
