--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,8 @@ a
 	line-height:0px;
 	
 	transition: 0.4s;
+	
+	
 }
 
 .linkable-image
@@ -43,6 +45,8 @@ a
 	position: relative;
 	
 	transition: 0.4s;
+	
+	
 }
 
 .linkable-image:hover img
@@ -62,6 +66,10 @@ a
 {
 	opacity: 0.75;
 	transition: 0.4s;
+	
+	object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .linkable-image h1
