--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,98 @@ a
 	text-decoration: none;
 }
 
+
+.primary-navigation
+{
+	margin: 0 auto;
+	display: block;
+	padding: 0;
+	text-align: center;
+	font-size: 32px;
+}
+
+.primary-navigation ul li
+{
+	list-style: none;
+	margin: 0 auto;
+	/* border-left: 2px solid white; */
+	display: inline-block;
+	padding: 0;
+	position: relative;
+	text-decoration: none;
+	text-align: center;
+	font-family: Bradley Hand, cursive;
+}
+
+.primary-navigation li a
+{
+	color:white;
+}
+
+.primary-navigation li:hover
+{
+	cursor: pointer;
+}
+
+.primary-navigation ul li ul
+{
+	visibility: hidden;
+	opacity: 0;
+	position: absolute;
+	padding-left: 0;
+	left: 0;
+	display: none;
+	background: black;
+	z-index:999;
+}
+
+.primary-navigation ul li:hover > ul,
+.primary-navigation ul li ul:hover
+{
+	visibility: visible;
+	opacity: 1;
+	display: block;
+	min-width: 300px;
+	text-align: left;
+	padding-top: 20px;
+	padding-left: 20px;
+}
+
+.primary-navigation ul li ul li
+{
+	clear: both;
+	width: 100%;
+	text-align: left;
+	margin-bottom: 20px;
+	border-style: none;
+	color: white;
+}
+
+.primary-navigation ul li ul li:hover
+{
+	padding-left: 10px;
+	border-left: 2px solid white;
+	transition: all 0.3s ease;
+}
+
+ul li ul li a
+{
+	transition: all 0.5s ease;
+}
+
 #main-header
 {
 	background-color:#212121;
+}
+
+#dropdown-text
+{
 	color:white;
 	text-align:center;
 	font-family: Bradley Hand, cursive;
-	overflow:hidden;
 }
+
+
 
 #main-footer
 {
