--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ a
 .primary-navigation ul li ul:hover
 {
 	visibility: visible;
-	opacity: 1;
+	opacity: 0.85;
 	display: block;
 	min-width: 300px;
 	text-align: left;
@@ -89,6 +89,14 @@ ul li ul li a
 	transition: all 0.5s ease;
 }
 
+.menu-icon
+{
+	width: 35px;
+    height: 5px;
+    background-color: black;
+    margin: 6px 0;
+}
+
 #main-header
 {
 	background-color:#212121;
@@ -101,8 +109,6 @@ ul li ul li a
 	font-family: Bradley Hand, cursive;
 }
 
-
-
 #main-footer
 {
 	background-color:#212121;
@@ -111,7 +117,19 @@ ul li ul li a
 	font-family: Bradley Hand, cursive;
 }
 
+#latest
+{
+	padding: 0;
+	line-height:0px;
+}
 
+#latest img
+{
+	width: 100%;
+	height: 500px;
+	object-fit: cover;
+	object-position: center;
+}
 
 .image-grid
 {
@@ -151,9 +169,9 @@ ul li ul li a
 	opacity: 0.75;
 	transition: 0.4s;
 	
-	object-fit: cover;
-  width: 100%;
-  height: 100%;
+	/* object-fit: cover;
+    width: 100%;
+    height: 100%; */
 }
 
 .linkable-image h1
@@ -179,52 +197,40 @@ ul li ul li a
 	transition: 0.4s;
 }
 
-/*
-.linkable-image p
+#latest-text-box
 {
 	position: absolute;
 	
-	visibility: hidden;
+	width:100%;
 	
-	bottom: 35%;
+	top: 45%;
 	left: 50%;
-	
-	transition: transform 0.4s;
 	
 	transform: translate(-50%, -50%);
 	
-	
-	
-	color: white;
-	font-family: Bradley Hand, cursive;
-}
-*/
-
-/*
-.linkable-image-title
-{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	
 	color: white;
-    font-family: Bradley Hand, cursive;
-    font-size:36px;
-    
-    transition: 0.5s;
+	font-family: Bradley Hand, cursive;
+	font-size: 36px;
+	
+	transition: 0.4s;
 }
 
-.linkable-image-title:hover
+#latest-text-box h2
 {
-	opacity: 0.5;
-	background: Black;
+	transition: 0.4s;
 }
-*/
+
+#latest-text-box p
+{
+	margin: 0;
+	font-size: 18px;
+	transition: 0.4s;
+}
 
 .gallery
 {	
