--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,33 @@
 body
 {
 	margin:0px;
-	background-color:#212121;
+	
+	background-image: radial-gradient(rgb(27, 27, 27), rgb(37, 37, 37), rgb(49, 49, 49) ,rgb(65, 65, 65), rgb(82, 82, 82));
+	background-size: 400% 400%;
+	position: relative;
+	animation: change 10s ease-in-out infinite;
+}
+
+@keyframes change
+{
+	0%
+	{
+        background-position: 0% 50%;
+    }
+    50%
+    {
+        background-position: 100% 50%;
+    }
+    100%
+    {
+        background-position: 0% 50%;
+    }
+}
+
+
+.body-container
+{
+	background-color: #212121;
 }
 
 a
@@ -13,17 +39,24 @@ a
 
 .primary-navigation
 {
-	margin: 0 auto;
+	width: 100%;
+	height: 100%;
+	margin: 0;
 	display: block;
 	padding: 0;
 	text-align: center;
 	font-size: 32px;
 }
 
+.primary-navigation ul
+{
+	margin: 0;
+}
+
 .primary-navigation ul li
 {
 	list-style: none;
-	margin: 0 auto;
+	margin: 0;
 	/* border-left: 2px solid white; */
 	display: inline-block;
 	padding: 0;
@@ -99,7 +132,10 @@ ul li ul li a
 
 #main-header
 {
-	background-color:#212121;
+	/* background-color:red; */
+	margin: 0px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 #dropdown-text
@@ -111,10 +147,17 @@ ul li ul li a
 
 #main-footer
 {
-	background-color:#212121;
+	/* background-color:red; */
 	color: #fff;
 	text-align: center;
 	font-family: Bradley Hand, cursive;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+#main-footer p
+{
+	margin: 0;
 }
 
 #latest
