--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,13 @@ body
 {
 	margin:0px;
 	
-	background-image: radial-gradient(rgb(27, 27, 27), rgb(37, 37, 37), rgb(49, 49, 49) ,rgb(65, 65, 65), rgb(82, 82, 82));
+	/* background-image: radial-gradient(rgb(27, 27, 27), rgb(37, 37, 37), rgb(49, 49, 49) ,rgb(65, 65, 65), rgb(82, 82, 82));
 	background-size: 400% 400%;
 	position: relative;
-	animation: change 10s ease-in-out infinite;
+	animation: change 10s ease-in-out infinite; */
 }
 
-@keyframes change
+/* @keyframes change
 {
 	0%
 	{
@@ -22,7 +22,7 @@ body
     {
         background-position: 0% 50%;
     }
-}
+} */
 
 
 .body-container
@@ -134,8 +134,22 @@ ul li ul li a
 {
 	/* background-color:red; */
 	margin: 0px;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	/* overflow: hidden; */
+	position: relative;
+}
+
+#videoBG
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+	/* z-index: -1; */
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	object-position: center;
 }
 
 #dropdown-text
@@ -147,7 +161,7 @@ ul li ul li a
 
 #main-footer
 {
-	/* background-color:red; */
+	background-color:black;
 	color: #fff;
 	text-align: center;
 	font-family: Bradley Hand, cursive;
