--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,8 @@ ul li ul li a
 	/* z-index: -1; */
 	width: 100%;
 	height: 100%;
-	object-fit: cover;
+	/* object-fit: cover; */
+	object-fit: none;
 	object-position: center;
 }
 
