--- a/css/style.css
+++ b/css/style.css
@@ -151,8 +151,8 @@ ul li ul li a
 	/* z-index: -1; */
 	width: 100%;
 	height: 100%;
-	/* object-fit: cover; */
-	object-fit: none;
+	object-fit: cover;
+	/* object-fit: none; */
 	object-position: center;
 }
 
@@ -262,7 +262,56 @@ ul li ul li a
 	transition: 0.4s;
 }
 
-#latest-text-box
+.linkable-image h2
+{
+	position: absolute;
+	
+	width:100%;
+	height:100%;
+	
+	top: 40%;
+	left: 50%;
+	
+	transform: translate(-50%, -50%);
+	
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	
+	color: white;
+	font-family: Bradley Hand, cursive;
+	font-size: 56px;
+	
+	transition: 0.4s;
+}
+
+.linkable-image p
+{
+	position: absolute;
+	
+	width:100%;
+	height:100%;
+	
+	top: 55%;
+	left: 50%;
+	
+	transform: translate(-50%, -50%);
+	
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	
+	color: white;
+	font-family: Bradley Hand, cursive;
+	font-size: 16px;
+	
+	transition: 0.4s;
+}
+
+ /* not used */
+/* #latest-text-box
 {
 	position: absolute;
 	
@@ -283,19 +332,35 @@ ul li ul li a
 	font-size: 36px;
 	
 	transition: 0.4s;
-}
+} */
 
-#latest-text-box h2
+/* not used */
+/* #latest-text-box h2
 {
-	transition: 0.4s;
-}
+	position: absolute;
+	
+	width:100%;
+	height:100%;
+	
+	top: 45%;
+	left: 50%;
+	
+	transform: translate(-50%, -50%);
 
-#latest-text-box p
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+
+	transition: 0.4s;
+} */
+
+/* #latest-text-box p
 {
 	margin: 0;
 	font-size: 18px;
 	transition: 0.4s;
-}
+} */
 
 .gallery
 {	
