--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,6 @@ body
 
 .body-container
 {
-	/* background-color: #212121; */
 	background-color: black;
 }
 
@@ -60,7 +59,6 @@ a
 {
 	list-style: none;
 	margin: 0;
-	/* border-left: 2px solid white; */
 	display: inline-block;
 	padding: 0;
 	position: relative;
@@ -135,11 +133,9 @@ ul li ul li a
 
 #main-header
 {
-	/* background-color:red; */
 	margin: 0px;
 	padding-top: 20px;
 	padding-bottom: 20px;
-	/* overflow: hidden; */
 	position: relative;
 }
 
@@ -148,7 +144,6 @@ ul li ul li a
 	position: absolute;
 	top: 0;
 	left: 0;
-	/* z-index: -1; */
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
@@ -220,22 +215,10 @@ ul li ul li a
 	opacity: 0.5;
 }
 
-/*
-.linkable-image:hover p
-{
-	visibility: visible;
-	translate: translateY(0);
-}
-*/
-
 .linkable-image img
 {
 	opacity: 0.75;
 	transition: 0.4s;
-	
-	/* object-fit: cover;
-    width: 100%;
-    height: 100%; */
 }
 
 .linkable-image h1
@@ -312,58 +295,6 @@ ul li ul li a
 	transition: 0.4s;
 }
 
- /* not used */
-/* #latest-text-box
-{
-	position: absolute;
-	
-	width:100%;
-	
-	top: 45%;
-	left: 50%;
-	
-	transform: translate(-50%, -50%);
-	
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	
-	color: white;
-	font-family: Bradley Hand, cursive;
-	font-size: 36px;
-	
-	transition: 0.4s;
-} */
-
-/* not used */
-/* #latest-text-box h2
-{
-	position: absolute;
-	
-	width:100%;
-	height:100%;
-	
-	top: 45%;
-	left: 50%;
-	
-	transform: translate(-50%, -50%);
-
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-
-	transition: 0.4s;
-} */
-
-/* #latest-text-box p
-{
-	margin: 0;
-	font-size: 18px;
-	transition: 0.4s;
-} */
-
 .gallery
 {	
 	display: grid;
@@ -404,18 +335,6 @@ ul li ul li a
 	transition: 0.4s;
 }
 
-/*
-@media only screen and (max-width: 768px) 
-{
-	.image-grid
-	{
-		display: grid;
-		grid-template-columns: repeat(1, 1fr);
-		line-height:0px;
-	}
-}
-*/
-
 @media (orientation: landscape) and (max-width: 1040px) 
 {
 	.image-grid
@@ -426,24 +345,6 @@ ul li ul li a
 		
 		transition: 0.4s;
 	}
-	
-	/*
-	.linkable-image-title
-	{
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		color: white;
-		font-family: Bradley Hand, cursive;
-		font-size:24px;
-	}
-	*/
 	
 	.linkable-image h1
 	{
@@ -471,24 +372,6 @@ ul li ul li a
 		line-height:0px;
 		transition: 0.4s;
 	}
-	
-	/*
-	.linkable-image-title
-	{
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		color: white;
-		font-family: Bradley Hand, cursive;
-		font-size:16px;
-	}
-	*/
 	
 	.linkable-image h1
 	{
@@ -546,5 +429,13 @@ ul li ul li a
 		grid-column: span 1;
 	}
 	
+}
+
+@media (hover: hover) {
+	.primary-navigation ul li:hover > ul,
+	.primary-navigation ul li ul:hover
+    {
+        background-color: blue;
+    }
 }
 
