--- a/css/style.css
+++ b/css/style.css
@@ -432,10 +432,17 @@ ul li ul li a
 }
 
 @media (hover: hover) {
+	/*
 	.primary-navigation ul li:hover > ul,
 	.primary-navigation ul li ul:hover
     {
         background-color: blue;
-    }
+	}
+	*/
+
+	.primary-navigation ul li ul li:hover
+	{
+		visibility: hidden;
+	}
 }
 
