--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ a
 	text-decoration: none;
 	text-align: center;
 	font-family: Bradley Hand, cursive;
+	border-left: 2px solid green;
 }
 
 .primary-navigation li a
@@ -100,6 +101,7 @@ a
 	padding-top: 20px;
 	padding-left: 20px;
 	z-index:999;
+	border-left: 2px solid red;
 }
 
 .primary-navigation ul li ul li
