--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,6 @@ a
 	text-decoration: none;
 	text-align: center;
 	font-family: Bradley Hand, cursive;
-	border-left: 2px solid green;
 }
 
 .primary-navigation li a
@@ -89,6 +88,19 @@ a
 	background: black;
 }
 
+/* test */
+.primary-navigation ul li:hover
+{
+	list-style: none;
+	margin: 0;
+	display: inline-block;
+	padding: 0;
+	position: relative;
+	text-decoration: none;
+	text-align: center;
+	font-family: Bradley Hand, cursive;
+	border-left: 2px solid yellow;
+}
 
 .primary-navigation ul li:hover > ul,
 .primary-navigation ul li ul:hover
@@ -101,7 +113,7 @@ a
 	padding-top: 20px;
 	padding-left: 20px;
 	z-index:999;
-	border-left: 2px solid red;
+	border-left: 2px solid green;
 }
 
 .primary-navigation ul li ul li
